Fix issue where invent part not showing up after video ends

--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ html {
   margin: 10vh auto 0;
   padding: 20px;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .choices, #again-quiz, #next-quiz{
@@ -77,4 +81,11 @@ html {
 
 #problem-statement img{
   width: 100%;
+}
+
+#quiz-question{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
